--- a/theme/wtp18/templates/blocks/contentDetail/pageWTP18.html
+++ b/theme/wtp18/templates/blocks/contentDetail/pageWTP18.html
@@ -2,7 +2,7 @@
 
         
         <!-- Ajout d'un menu secondaire en haute de page -->
-        <div ng-if="{{block.code | split:'/':0}} ==1" >
+        <div ng-if="block.code=='1/intervenant' " >
             <div ng-repeat="bloc in contentDetailCtrl.pageBlock | orderBy :'order' track by $index" class="" >
                 <a class="row nav-sec col-xs-12 col-sm-4" style="padding:15px; background-color:#c3357b;"  ng-if="bloc[0].color==0" ng-href="{{contentDetailCtrl.menu.url}}?page={{bloc[0].code}}">{{bloc[0].title | split:'//':0}}</a>
                 <a class="row nav-sec col-xs-12 col-sm-4" style="padding:15px; background-color:#472a72;"  ng-if="bloc[0].color==1" ng-href="{{contentDetailCtrl.menu.url}}?page={{bloc[0].code}}">{{bloc[0].title | split:'//':0}}</a>
