--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -81,8 +81,8 @@ a:link, a:visited, a:hover,a{text-decoration:none}
     .container > .navbar-header, .container-fluid > .navbar-header, .container > .navbar-collapse, .container-fluid > .navbar-collapse{margin-left:0; max-height:50px; margin-right:0}
 }
 
-@media screen and (min-width: @500px) and (max-width: @768px){
-    .container{width:@mobil;}
+@media screen and (min-width: 500px) and (max-width: 768px){
+    .container{width:@mobile;}
 }
 
 /*slider controls*/
@@ -998,6 +998,12 @@ nav.inscriptions{background-color:@inscriptions}
     border-style: solid;
     margin:0 auto;
     margin-bottom: 15px;
+}
+@media screen and (max-width: 500px) {
+				.bordure{border-top: 2px solid black;border-bottom: 2px solid black}
+}
+@media screen and (min-width: 500px) {
+				.bordure{border-left: 2px solid black;border-right: 2px solid black}
 }
 //WORKSHOPS LIST
 .date-workshops{
