--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -224,7 +224,7 @@ display: block;
 }
 @media screen and (min-width: 768px) {
 	.nav-entree {padding-top:400px;}
-	.nav-entree .titre1{height: 120px;}
+	.nav-entree .titre1{height: 150px; padding-top: 50px;}
 }
 .nav-entree{
 				font-size: 2em;
