--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -469,9 +469,9 @@ header.parallax{
     background-attachment: fixed;
     background-size: cover;
     h1,h2,h3,h4,h5,p{color:white};
-    height:600px;
+    height:700px;
     //box-shadow:inset 0 0 0 1000px rgba(84,84,84,.25);
-    line-height: 600px;
+    line-height: 700px;
     text-align: center;
     background-color: white;
     overflow-y:hidden;
@@ -483,8 +483,8 @@ header.parallax>div{line-height: 1.6em; font-size: 1.2em;display: inline-block;t
 header.parallax.page{
 				background-attachment: scroll;
 	text-align: center;
-	h1{text-transform: uppercase; font-size: 3.5em; font-weight: bold}
-	height:400px;line-height: 400px;
+	h1{text-transform: uppercase; font-size: 8em; font-family: 'Oswald SemiBold';}
+	height:700px;line-height: 400px;
 }
 @media screen and (max-width: @tablet) and (min-width: @mobile){
 				header.parallax.page h1{font-size:2.5em;}
