--- a/theme/wtp18/templates/blocks/contentDetail/pageWTP18.html
+++ b/theme/wtp18/templates/blocks/contentDetail/pageWTP18.html
@@ -39,7 +39,7 @@
 
 <div ng-attr-id=" {{block.code | split:'/':1}}" >
     <header class="parallax page" afkl-lazy-image-options='{"background": true}'
-                afkl-lazy-image="{{rubedo.imageUrl.getUrlByMediaId(fieldEntity['banner'],{height:'800px',mode:'boxed'})}} 768w, {{rubedo.imageUrl.getUrlByMediaId(fieldEntity['banner'] ,{height:'600px',mode:'boxed'})}} 972w, {{rubedo.imageUrl.getUrlByMediaId(fieldEntity['banner']  ,{height:'1920px',mode:'boxed'})}} 1650w">
+                afkl-lazy-image="{{rubedo.imageUrl.getUrlByMediaId(fieldEntity['banner'],{height:'800px',mode:'boxed'})}} 768w, {{rubedo.imageUrl.getUrlByMediaId(fieldEntity['banner'] ,{height:'600px',mode:'boxed'})}} 972w, {{rubedo.imageUrl.getUrlByMediaId(fieldEntity['banner']  ,{width:'1920px',mode:'boxed'})}} 1650w">
         <div class="container">
             <rubedo-field field= "{{contentDetailCtrl.getFieldByName('text')}}" ng-if="fieldEntity['text']"></rubedo-field>
         </div>
