--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -483,14 +483,16 @@ header.parallax>div{line-height: 1.6em; font-size: 1.2em;display: inline-block;t
 header.parallax.page{
 				background-attachment: scroll;
 	text-align: center;
-	h1{text-transform: uppercase; font-size: 8em; font-family: 'Oswald SemiBold';}
+	h1{text-transform: uppercase; font-size: 6em; font-family: 'Oswald SemiBold';}
 	height:700px;line-height: 400px;
 }
 @media screen and (max-width: @tablet) and (min-width: @mobile){
-				header.parallax.page h1{font-size:2.5em;}
+				header.parallax.page h1{font-size:3em;}
+				header.parallax.page{height:400px;line-height: 400px;}
 }
 @media screen and (max-width: @mobile){
 				header.parallax.page h1{font-size:2em;}
+				header.parallax.page{height:400px;line-height: 400px;}
 }
 /*@media screen and (min-width: @min_sm) {
     .large header.content{line-height: 600px; height:600px}
