--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -1,7 +1,7 @@
 /*COLORS*/
 //@main: #ff3100;
-@main1:#cd2d05;
-@main:#7d2913;
+@main:#cd2d05;
+@main1:#7d2913;
 @bg: #dedede;
 @txt:#252525;
 @grey:#c2c2c2;
