--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -325,13 +325,13 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 		text-align: right;
 }
 
-.redacteur p{
+p .redacteur{
 		font-size: 0.9em;
 		text-transform: uppercase !important;
 		margin-bottom: 80px !important;
 }
 
-.resume {
+p .resume {
 		color:@grey !important;
 }
 
