--- a/theme/foi/templates/blocks/contentList.html
+++ b/theme/foi/templates/blocks/contentList.html
@@ -64,7 +64,7 @@
                         
                     </div>
                 </div>
-                <!--PRESENTATION ARTICLES-->
+                <!--PRESENTATION ARTICLES 3 COLONNES-->
                 <div  ng-switch-when="3">
                     <div ng-controller="ContentListDetailController as contentListDetailCtrl" ng-repeat="content in columnContents track by $index" class="articlePresentation col-sm-4" ng-class="contentListCtrl.columns" >
                         <a class="block" ng-href="{{ fieldEditMode ? '' : content.detailPageUrl }}">
@@ -78,6 +78,41 @@
                             <h4 class="list-item-title col-md-6"><span>{{content.fields.text}} <span ng-if="contentListCtrl.isFOContributeMode">( {{rubedo.translate("Label." + content.status.toLowerCase())}} )</span></span>
                                 <p class="chapeau">{{content.fields.redacteur}}</p>
                             </h4>
+                   
+                            
+                        </a>
+                        
+                    </div>
+                </div>
+                <!--PRESENTATION ARTICLES 2 COLONNES-->
+                <div  ng-switch-when="2">
+                    <div ng-controller="ContentListDetailController as contentListDetailCtrl" ng-repeat="content in columnContents track by $index" class="articlePresentation col-sm-6" ng-class="contentListCtrl.columns" >
+                        <div class="col-sm-12" ng-if="$index<=3">
+                            <a class="block" ng-href="{{ fieldEditMode ? '' : content.detailPageUrl }}">
+                                <div class="list-item-img col-sm-6">
+                                    <img class="img-responsive" ng-if="content.fields.image"
+                                        ng-src="{{rubedo.imageUrl.getUrlByMediaId(content.fields.image,{height:'400px',mode:'boxed'}) }}"
+                                        alt="{{ content.fields.text }}"/>
+                                </div>
+                                
+                                <!--<p class="list-tags" ng-repeat="taxo in content.taxonomy['5a114f1b396588d22856706f']" ng-if="contentListCtrl.getTermInTaxo(taxo)">{{contentListCtrl.getTermInTaxo(taxo)}}</p>-->
+                                <h4 class="list-item-title col-sm-6"><span>{{content.fields.text}} <span ng-if="contentListCtrl.isFOContributeMode">( {{rubedo.translate("Label." + content.status.toLowerCase())}} )</span></span></h4>
+                                    <p class="redacteur">{{content.fields.redacteur}}</p>
+                                    <p class="chapeau">{{content.fields.summary}}</p>
+                        </div>
+                        <div class="col-sm-6" ng-if="$index>3">
+                                <a class="block" ng-href="{{ fieldEditMode ? '' : content.detailPageUrl }}">
+                                    <div class="list-item-img col-sm-6">
+                                        <img class="img-responsive" ng-if="content.fields.image"
+                                            ng-src="{{rubedo.imageUrl.getUrlByMediaId(content.fields.image,{height:'400px',mode:'boxed'}) }}"
+                                            alt="{{ content.fields.text }}"/>
+                                    </div>
+                                    
+                                    <!--<p class="list-tags" ng-repeat="taxo in content.taxonomy['5a114f1b396588d22856706f']" ng-if="contentListCtrl.getTermInTaxo(taxo)">{{contentListCtrl.getTermInTaxo(taxo)}}</p>-->
+                                    <h4 class="list-item-title col-sm-6"><span>{{content.fields.text}} <span ng-if="contentListCtrl.isFOContributeMode">( {{rubedo.translate("Label." + content.status.toLowerCase())}} )</span></span></h4>
+                                        <p class="redacteur">{{content.fields.redacteur}}</p>
+                                    
+                        </div>
                    
                             
                         </a>
