--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -303,6 +303,10 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 			-o-transform: scale(1.05);
 			-moz-transform: scale(1.05);
 }
+.articlesAnciens {height:80px !important;}
+.articlesAnciens:hover {
+		color:@grey;
+}
 
 .block{
     padding-bottom: 15px;
