--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -307,10 +307,14 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 		height:80px;
 		overflow-y: hidden;
   margin-bottom: 30px;
-		h5:hover{text-decoration: none; color:@grey}
+		h5:hover{text-decoration: none; 	font-weight:bold;}
+}
+.articlesAnciens:hover img {
+		opacity: 0.5;
+  filter: alpha(opacity=50);
 }
 .articlesAnciens:hover {
-		color:@grey;
+		font-weight:bold;
 }
 
 .block{
