--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -307,13 +307,12 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 		height:80px;
 		overflow-y: hidden;
   margin-bottom: 30px;
-		h5:hover{text-decoration: none; 	font-weight:bold;}
 }
 .articlesAnciens:hover img {
-		opacity: 0.5;
-  filter: alpha(opacity=50);
+		opacity: 0.8;
+  filter: alpha(opacity=80);
 }
-.articlesAnciens:hover {
+.articlesAnciens:hover h5{
 		font-weight:bold;
 }
 
@@ -325,7 +324,7 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 		height: 180px;
   overflow-y: hidden;
   margin-bottom: 30px;
-		h4:hover{text-decoration: none; color:@grey}
+		h4:hover{text-decoration: none; font-weight:bold}
 }
 
 
