--- a/theme/foi/templates/blocks/contentDetail/article_foi.html
+++ b/theme/foi/templates/blocks/contentDetail/article_foi.html
@@ -31,6 +31,8 @@
 			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('redacteur')}}" ng-if="fieldEntity['redacteur']" class="redacteur"></rubedo-field><!--Rédacteur-->
 			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('richText')}}" ng-if="fieldEntity['richText']" class="contenu_article"></rubedo-field>
 					
+					
+							<!-- ACCES ABONNE -->
 							<div ng-if="!isClient && !contentDetailCtrl.oldArticle" class="col-md-12 bg-grey limitationArticle" style="text-align:center">
 								<h2 >Article réservé aux abonnés</h2>
 								<p>Il vous reste 80% de l'article à découvrir... Abonnez-vous pour poursuivre la lecture</p>
@@ -82,6 +84,61 @@
 								</div> 
 								<div class="col-sm-6">
 								  <p style="text-align:center"><button  class="btn btn-default btn-abonne"><a rubedo-page-link="58e51a9c245640db008bde81">Je m'abonne</a></button></br></p>
+								</div>
+							</div>
+							
+							<!-- ACCES VISITEUR -->
+							<div ng-if="!isVisiteur && contentDetailCtrl.oldArticle" class="col-md-12 bg-grey limitationArticle" style="text-align:center">
+								<h2 >Accédez gratuitement à cet article en créant votre compte personnel</h2>
+								<p>Il vous reste 80% de l'article à découvrir... Inscrivez-vous gratuitement pour poursuivre la lecture</p>
+								<div class="col-sm-6" ng-show="!rubedo.current.user">
+						
+											<button class="btn btn-default btn-connect" data-toggle="modal" data-target="#rubedoAuthModal">Je me connecte</button>
+											<div class="modal fade" id="rubedoAuthModal" tabindex="-1" role="dialog" aria-labelledby="rubedoAuthModalLabel" aria-hidden="true">
+												<div class="modal-dialog modal-sm">
+													<div class="modal-content">
+														<div class="modal-header">
+															<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">{{rubedo.translate("Label.Close","Close")}}</span></button>
+															<h4 class="modal-title" id="rubedoAuthModalLabel">{{rubedo.translate("Blocks.Auth.Label.LogIn","Log in")}}</h4>
+														</div>
+														<div class="modal-body">
+															<form class="form" role="form" name="rubedoAuthForm" ng-submit="authCtrl.authenticate()">
+																<div class="form-group" ng-class="{'has-error':rubedoAuthForm.login.$error.required}">
+																	<label class="sr-only" for="rubedoAuthLoginInput">{{rubedo.translate("Blocks.Auth.Label.Login","Login")}}</label>
+																	<input type="text" name="login" class="form-control" id="rubedoAuthLoginInput" placeholder="{{rubedo.translate('Blocks.Auth.Label.Login','Login')}}" ng-model="authCtrl.credentials.login" required>
+																</div>
+																<div class="form-group" ng-class="{'has-error':rubedoAuthForm.password.$error.required}">
+																	<label class="sr-only" for="rubedoAuthPasswordInput">{{rubedo.translate("Blocks.Auth.Label.Password","Password")}}</label>
+																	<input type="password" name="password" class="form-control" id="rubedoAuthPasswordInput" placeholder="{{rubedo.translate('Blocks.Auth.Label.Password','Password')}}" ng-model="authCtrl.credentials.password" required>
+																</div>
+																<div class="checkbox">
+																	<label>
+																		<input type="checkbox" ng-model="authCtrl.rememberMe"> {{rubedo.translate("Blocks.Auth.Label.RememberMe","Remember me")}}
+																	</label>
+																</div>
+																<input type="submit" class="hidden">
+															</form>
+															<p ng-if="authCtrl.signUpPageUrl">
+																<a ng-href="{{authCtrl.signUpPageUrl}}" ng-click="handleCSEvent('signUp')" target="_self">{{rubedo.translate("Blocks.Auth.Register", "Registration")}}</a>
+															</p>
+															<a href ng-click="authCtrl.recoverPwdModal()">{{rubedo.translate("Blocks.Auth.ForgotPassword", "I lost my password")}}</a>
+									
+															<div ng-show="authCtrl.authError" class="alert alert-danger alert-dismissible" role="alert">
+																<button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">{{rubedo.translate("Label.Close","Close")}}</span></button>
+																<strong>Error !</strong> {{authCtrl.authError}}
+															</div>
+														</div>
+														<div class="modal-footer">
+															<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> {{rubedo.translate("Label.Cancel", "Cancel")}}</button>
+															<button type="button" class="btn btn-primary" ng-click="authCtrl.authenticate()"><span class="glyphicon glyphicon-ok"></span> {{rubedo.translate("Label.Submit", "Submit")}}</button>
+														</div>
+													</div>
+												</div>
+											</div>
+								  
+								</div> 
+								<div class="col-sm-6">
+								  <p style="text-align:center"><button  class="btn btn-default btn-abonne"><a rubedo-page-link="58e51a9c245640db008bde81">Je m'inscris gratuitement</a></button></br></p>
 								</div>
 							</div>
 							
