--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -138,7 +138,6 @@ a:link, a:visited, a:hover,a{text-decoration:none}
 .navbar-fixed-top{border-width:0; max-width: @max_width; width: 100; margin:0 auto;}
 nav li a {color:@txt_violet ;text-shadow:none;}
 nav {margin-bottom:0px;}
-nav:after{content:''; display: block}
 .shortsingle-rubedo .shortsingle-img-container{ width:100%;}
 .entry-header{text-align:center;margin-bottom:15px}
 .button{
@@ -1835,4 +1834,15 @@ ul.programme li:first-of-type:first-line{font-size:1.5em}
 	//a:hover h3 {color:@white}
 	img{margin: 0; width:100%; opacity: 0.9; transition: all 0.5s ease; }
 	a:hover img{transform: scale(1.05); opacity:0.5;}
+}
+
+// Ajout Images en masse//
+.form-group {
+    margin-bottom: 15px;
+}
+label {
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: 700;
 }
