--- a/theme/wtp18/templates/blocks/imageBatchUpload.html
+++ b/theme/wtp18/templates/blocks/imageBatchUpload.html
@@ -9,7 +9,13 @@
     margin: 10px auto;
 }
 </style>
-<div ng-controller="ImageBatchUploadController as imgCtrl" ng-if="rubedo.current.user" class="texte">
+<div ng-controller="ImageBatchUploadController as imgCtrl" ng-if="rubedo.current.user" class="texte" style=".texte {
+    padding: 80px 15px;
+    max-width: 860px;
+    font-size: 1.1em;
+    line-height: 1.4em;
+    margin-top: 100px;  }
+">
         <form class="row">
                 <div class="form-group">
                         <label class="col-sm-12">Renommer les photos ?</label>
