--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -138,6 +138,11 @@ a:link, a:visited, a:hover,a{text-decoration:none}
 .navbar-fixed-top{border-width:0; max-width: @max_width; width: 100; margin:0 auto;}
 nav li a {color:@txt_violet ;text-shadow:none;}
 nav {margin-bottom:0px;}
+.welcome-page:before{
+    content:'';
+    display: block;
+    background-image: url('../img/vague.png');
+}
 .shortsingle-rubedo .shortsingle-img-container{ width:100%;}
 .entry-header{text-align:center;margin-bottom:15px}
 .button{
