--- a/theme/wtp18/templates/blocks/navigation.html
+++ b/theme/wtp18/templates/blocks/navigation.html
@@ -34,13 +34,10 @@
 				</li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <form class="navbar-form" ng-if="menuCtrl.searchEnabled" ng-submit="menuCtrl.onSubmit()" role="form">
-                    <div class="input-group">
-                        <input class="form-control" type="text" ng-model="menuCtrl.query" ng-attr-placeholder="{{rubedo.translate('Search.Label.Search','Search')}}"/>
-                            <span class="input-group-btn"><button class="btn btn-default" type="submit">
-                                <span class="glyphicon glyphicon-search"></span></button></span>
-                    </div>
-                </form>
+				<li class="home-button hidden-xs" >
+					<a rubedo-page-link="5a630da239658886137fcea7">C</a>
+				</li>
+				
             </ul>
         </div>
     </div>
