--- a/theme/wtp18/templates/blocks/navigation.html
+++ b/theme/wtp18/templates/blocks/navigation.html
@@ -1,5 +1,5 @@
 <div ng-controller="MenuController as menuCtrl">
-<nav  role="navigation">
+	<nav  role="navigation">
 		<div class="home">
 			<a ng-href="/fr/accueil" class="ng-scope">
 			<img alt="" style="height:70px;" class="img-responsive" ng-src="/dam?media-id=5a6f4c1d396588d25e999bd9&amp;">
@@ -33,12 +33,38 @@
 					</ul>
 				</li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right" ng-controller="LanguageMenuController as languageMenuCtrl">
 				<li class="home-button hidden-xs" >
 					<a rubedo-page-link="5a630da239658886137fcea7">C</a>
 				</li>
-				
-            </ul>
+				<li class="home-button hidden-xs hidden-sm" target="_blank">
+					<a href="https://twitter.com/@Festival_WTP">ú</a>
+				</li>
+				<li class="home-button hidden-xs hidden-sm" target="_blank">
+					<a href="https://facebook.com/festivalwelcometoparadise">\</a>
+				</li>
+				<li class="home-button hidden-xs hidden-sm" target="_blank">
+					<a href="https://youtube.com/Jeunes1830ans">’</a>
+				</li>
+			</ul>
+
+
+	
+					
+					<!--<div ng-controller="LanguageMenuController as languageMenuCtrl">
+							<div  class="btn-group nav-item language">
+								<span>
+									<img  ng-src="{{languageMenuCtrl.getFlagUrl(languageMenuCtrl.currentLang.flagCode)}}" alt="{{languageMenuCtrl.currentLang.flagCode}}" style="vertical-align: top"/>
+								</span>
+								<div>
+								<a ng-repeat="lang in languageMenuCtrl.languages" ng-click="languageMenuCtrl.changeLang(lang.lang)" href ng-if="!languageMenuCtrl.isDisabled(lang.lang)">
+									<span ><img ng-src="{{languageMenuCtrl.getFlagUrl(lang.flagCode)}}" alt="{{lang.flagCode}}"/></span>
+								</a>
+							</div>
+						
+						</div>	-->
+
+
         </div>
-    </div>
-</nav>
+    </nav>
+</div>
