--- a/theme/wtp18/css/wtp2018.css
+++ b/theme/wtp18/css/wtp2018.css
@@ -240,7 +240,7 @@ nav li a {
 nav {
   margin-bottom: 0px;
 }
-.welcome-page:before {
+nav:after {
   content: '';
   display: block;
   background-image: url('../img/vague.png');
