--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -138,7 +138,7 @@ a:link, a:visited, a:hover,a{text-decoration:none}
 .navbar-fixed-top{border-width:0; max-width: @max_width; width: 100; margin:0 auto;}
 nav li a {color:@txt_violet ;text-shadow:none;}
 nav {margin-bottom:0px;}
-.welcome-page:before{
+nav:after{
     content:'';
     display: block;
     background-image: url('../img/vague.png');
