--- a/theme/wtp18/templates/blocks/navigation.html
+++ b/theme/wtp18/templates/blocks/navigation.html
@@ -47,12 +47,12 @@
 					<a href="https://youtube.com/Jeunes1830ans">’</a>
 				</li>
 				<li ng-controller="LanguageMenuController as languageMenuCtrl">
-					<div  class="btn-group nav-item language">
+					<div class="btn-group nav-item language">
 						<span>
 							<img  ng-src="{{languageMenuCtrl.getFlagUrl(languageMenuCtrl.currentLang.flagCode)}}" alt="{{languageMenuCtrl.currentLang.flagCode}}" style="vertical-align: top"/>
 						</span>
 						<div>
-						<a ng-repeat="lang in languageMenuCtrl.languages" ng-click="languageMenuCtrl.changeLang(lang.lang)" href ng-if="!languageMenuCtrl.isDisabled(lang.lang)">
+						<a ng-repeat="lang in languageMenuCtrl.languages" ng-click="languageMenuCtrl.changeLang(lang.lang)" href ng-if="lang.lang != languageMenuCtrl.currentLang.lang">
 							<span ><img ng-src="{{languageMenuCtrl.getFlagUrl(lang.flagCode)}}" alt="{{lang.flagCode}}"/></span>
 						</a>
 					</div>
